--- a/FoglioStile.css
+++ b/FoglioStile.css
@@ -1,30 +1,29 @@
-﻿
-table {
-    background-image: url('space.jpg');
-    border: 1px groove white;
+﻿body {
+    background: linear-gradient(45deg, #2C3E50, #000000);
+    color: whitesmoke;
+}
+
+header{
+    background: linear-gradient(45deg, #0cebeb, #20e3b2, #29ffc6);
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+}
+
+ul{
+    text-decoration: none;
+    display: flex;
     padding: 5px;
-    text-align: center;
-    width:50%;
-    font-family: 'Gill Sans';
-    margin-top: 4px;
-    color: white;
 }
 
-tr, td{
-	border: 1px groove rgb(161, 161, 161);
-}
-
-h1 {
-    font-family: 'Segoe UI';
-    font-size: 20px;
-    color:white;
-}
-
-body {
-    background: linear-gradient (35deg, #4b6cb7, #182848);
-}
-container {
-    margin: 10px, 10px, 10px, 16px;
+li{
+    list-style-type: none;
+    margin: 5px 5px 5px 5px;
 }
 
 
