--- a/FoglioStile.css
+++ b/FoglioStile.css
@@ -1,24 +1,27 @@
 ﻿body {
-    background: linear-gradient( #2C3E50, #000000);
+    background: linear-gradient( #D7E1EC, #ffffff);
     height: 100%;
     margin: 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    color: whitesmoke;
+    color: black;
     height: 200px;
 }
 
 header{
     height: 50%;
-    background: linear-gradient(45deg, #0cebeb, #20e3b2, #29ffc6);
-    font-family: 'Courier New', Courier, monospace;
+    background: linear-gradient(45deg, #1A2980, #1A2979, #26D0CE);
+    font-family: 'Londrina Solid', monospace;
+    color: white;
     font-size: 18px;
-    font-weight: 400;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
+a{
+    color: white;
+}
 .header{
     width: 25%;
     display: flex;
